--- a/assets/css/sass/blocks/_sections.scss
+++ b/assets/css/sass/blocks/_sections.scss
@@ -67,7 +67,7 @@
     @extend .u-font-miller;
     @extend .u-text-center;
     font-size: rem(18);
-    letter-spacing: .2em;
+    letter-spacing: .2rem;
     color: $dark-gray;
     text-transform: uppercase;
     border-bottom: 1px solid rgba(0,0,0,.15);
